PARSING/parser.output
Terminals unused in grammar

   TWS
   V_MAT4
   RES_XRDER
   OTHER


State 1 conflicts: 1 shift/reduce
State 3 conflicts: 8 shift/reduce
State 127 conflicts: 2 shift/reduce
State 165 conflicts: 2 shift/reduce
State 267 conflicts: 2 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: config
    2     | script

    3 config: optlfCicle mainscene optlfCicle scenelist optlfCicle configHelper optlfCicle

    4 configHelper: /* empty */
    5             | deploy crlf configHelper

    6 mainscene: RES_MSCN F_ID crlf

    7 scenelist: RES_SCNS SYM_OBRAC scenelistHelper SYM_CBRAC crlf

    8 scenelistHelper: F_ID SYM_COMMA scenelistHelper
    9                | F_ID

   10 optlfCicle: /* empty */
   11           | crlf optlfCicle

   12 script: /* empty */
   13       | assign crlf script
   14       | expr crlf script
   15       | deploy crlf script
   16       | function crlf script
   17       | vardec crlf script
   18       | crlf script

   19 crlf: CR LF
   20     | LF

   21 optlf: /* empty */
   22      | crlf

   23 deploy: RES_DPLY M_ID

   24 function: RES_ORDER V_ID SYM_OPARE functionHelper SYM_CPARE optlf SYM_OCURL crlf functionHelper2 SYM_CCURL

   25 functionHelper: /* empty */
   26               | vardec SYM_COMMA functionHelper
   27               | vardec

   28 functionHelper2: stmt crlf functionHelper3

   29 functionHelper3: /* empty */
   30                | functionHelper2

   31 stmt: /* empty */
   32     | assign
   33     | expr
   34     | logicstruct
   35     | vardec
   36     | RES_MEDIT
   37     | ret

   38 funcall: V_ID SYM_OPARE funcallHelper SYM_CPARE

   39 funcallHelper: /* empty */
   40              | expr funcallHelper2

   41 funcallHelper2: /* empty */
   42               | SYM_COMMA funcallHelper

   43 ret: RES_RETRN expr

   44 vardec: V_VAR V_ID
   45       | arrdec
   46       | matdec
   47       | mapdec
   48       | vectordec
   49       | elementdec

   50 basictypes: V_CHAR
   51           | V_STRING
   52           | V_FLOAT
   53           | V_DOUBLE
   54           | V_INT
   55           | V_BOOL
   56           | V_HEX

   57 cte: basictypes
   58    | arr
   59    | mat
   60    | map
   61    | vector

   62 var_or_cte: V_ID
   63           | cte

   64 assign: vardec MTH_SEQUA expr
   65       | V_ID MTH_SEQUA expr
   66       | structaccess MTH_SEQUA expr
   67       | property MTH_SEQUA expr

   68 int_or_blank: /* empty */
   69             | V_INT

   70 structaccess: V_ID SYM_OBRAC expr SYM_CBRAC structIndex

   71 structIndex: /* empty */
   72            | SYM_OBRAC expr SYM_CBRAC

   73 arrdec: V_ARR V_ID SYM_OBRAC int_or_blank SYM_CBRAC

   74 arr: SYM_OBRAC arrHelper SYM_CBRAC

   75 arrHelper: expr SYM_COMMA arrHelper
   76          | expr

   77 matdec: V_MAT V_ID SYM_OBRAC int_or_blank SYM_CBRAC SYM_OBRAC int_or_blank SYM_CBRAC

   78 mat: SYM_OBRAC optlf matHelper SYM_CBRAC

   79 matHelper: arr SYM_COMMA optlf matHelper
   80          | arr optlf

   81 mapdec: V_MAP V_ID

   82 map: SYM_OCURL optlf mapHelper SYM_CCURL

   83 mapHelper: basictypes SYM_COLON expr crlf mapHelper2
   84          | V_ID SYM_COLON expr crlf mapHelper2

   85 mapHelper2: /* empty */
   86           | mapHelper

   87 vectordec: V_VECTOR V_ID

   88 vector: SYM_OCURL expr SYM_COMMA expr SYM_CCURL

   89 elementdec: V_ELEM V_ID

   90 property: V_ID SYM_DOT V_ID

   91 expr: logicoperation MTH_OR expr
   92     | logicoperation

   93 logicoperation: logicfactor MTH_AND logicoperation
   94               | logicfactor

   95 logicfactor: comparison
   96            | MTH_NOT comparison

   97 comparison: operation comp_operator operation
   98           | operation

   99 operation: factor MTH_PLUS operation
  100          | factor MTH_MINUS operation
  101          | factor

  102 factor: hvalue MTH_ASTRK factor
  103       | hvalue MTH_DIVIS factor
  104       | hvalue

  105 hvalue: value MTH_POWER hvalue
  106       | value MTH_ROOT hvalue
  107       | value

  108 value: var_or_cte
  109      | funcall
  110      | structaccess
  111      | property
  112      | SYM_OPARE expr SYM_CPARE

  113 comp_operator: MTH_GT
  114              | MTH_GTEQ
  115              | MTH_LT
  116              | MTH_LTEQ
  117              | MTH_DEQUA
  118              | MTH_NOTEQ

  119 logicstruct: if
  120            | for
  121            | while

  122 if: LOG_IF ifHelper ifHelper3

  123 ifHelper: SYM_OPARE expr SYM_CPARE optlf SYM_OCURL crlf newlineCicle SYM_CCURL optlf ifHelper2

  124 ifHelper2: /* empty */
  125          | LOG_ELIF ifHelper

  126 ifHelper3: /* empty */
  127          | LOG_ELSE optlf SYM_OCURL crlf newlineCicle SYM_CCURL

  128 for: LOG_FOR forHelper SYM_ARROW V_ID optlf SYM_OCURL crlf newlineCicle SYM_CCURL

  129 forHelper: V_ID
  130          | stepfor

  131 stepfor: SYM_OBRAC expr SYM_COMMA expr SYM_COMMA expr SYM_CBRAC

  132 while: LOG_WHILE SYM_OPARE expr SYM_CPARE optlf SYM_OCURL crlf newlineCicle SYM_CCURL

  133 newlineCicle: newline newlineCicle
  134             | newline

  135 newline: stmt crlf


Terminals, with rules where they appear

$end (0) 0
error (256)
SYM_OBRAC (258) 7 70 72 73 74 77 78 131
SYM_CBRAC (259) 7 70 72 73 74 77 78 131
SYM_OPARE (260) 24 38 112 123 132
SYM_CPARE (261) 24 38 112 123 132
SYM_OCURL (262) 24 82 88 123 127 128 132
SYM_CCURL (263) 24 82 88 123 127 128 132
SYM_COMMA (264) 8 26 42 75 79 88 131
SYM_ARROW (265) 128
SYM_COLON (266) 83 84
SYM_DOT (267) 90
MTH_SEQUA (268) 64 65 66 67
MTH_DEQUA (269) 117
MTH_GT (270) 113
MTH_LT (271) 115
MTH_GTEQ (272) 114
MTH_LTEQ (273) 116
MTH_NOT (274) 96
MTH_NOTEQ (275) 118
MTH_PLUS (276) 99
MTH_MINUS (277) 100
MTH_ASTRK (278) 102
MTH_DIVIS (279) 103
MTH_POWER (280) 105
MTH_ROOT (281) 106
MTH_AND (282) 93
MTH_OR (283) 91
LF (284) 19 20
CR (285) 19
TWS (286)
RES_MSCN (287) 6
RES_SCNS (288) 7
RES_DPLY (289) 23
V_ID (290) 24 38 44 62 65 70 73 77 81 84 87 89 90 128 129
F_ID (291) 6 8 9
M_ID (292) 23
LOG_IF (293) 122
LOG_ELIF (294) 125
LOG_ELSE (295) 127
LOG_FOR (296) 128
LOG_WHILE (297) 132
V_VAR (298) 44
V_CHAR (299) 50
V_STRING (300) 51
V_FLOAT (301) 52
V_INT (302) 54 69
V_DOUBLE (303) 53
V_BOOL (304) 55
V_HEX (305) 56
V_ARR (306) 73
V_MAT (307) 77
V_MAT4 (308)
V_MAP (309) 81
V_VECTOR (310) 87
V_ELEM (311) 89
RES_ORDER (312) 24
RES_XRDER (313)
RES_MEDIT (314) 36
RES_RETRN (315) 43
OTHER (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
prog (63)
    on left: 1 2, on right: 0
config (64)
    on left: 3, on right: 1
configHelper (65)
    on left: 4 5, on right: 3 5
mainscene (66)
    on left: 6, on right: 3
scenelist (67)
    on left: 7, on right: 3
scenelistHelper (68)
    on left: 8 9, on right: 7 8
optlfCicle (69)
    on left: 10 11, on right: 3 11
script (70)
    on left: 12 13 14 15 16 17 18, on right: 2 13 14 15 16 17 18
crlf (71)
    on left: 19 20, on right: 5 6 7 11 13 14 15 16 17 18 22 24 28 83
    84 123 127 128 132 135
optlf (72)
    on left: 21 22, on right: 24 78 79 80 82 123 127 128 132
deploy (73)
    on left: 23, on right: 5 15
function (74)
    on left: 24, on right: 16
functionHelper (75)
    on left: 25 26 27, on right: 24 26
functionHelper2 (76)
    on left: 28, on right: 24 30
functionHelper3 (77)
    on left: 29 30, on right: 28
stmt (78)
    on left: 31 32 33 34 35 36 37, on right: 28 135
funcall (79)
    on left: 38, on right: 109
funcallHelper (80)
    on left: 39 40, on right: 38 42
funcallHelper2 (81)
    on left: 41 42, on right: 40
ret (82)
    on left: 43, on right: 37
vardec (83)
    on left: 44 45 46 47 48 49, on right: 17 26 27 35 64
basictypes (84)
    on left: 50 51 52 53 54 55 56, on right: 57 83
cte (85)
    on left: 57 58 59 60 61, on right: 63
var_or_cte (86)
    on left: 62 63, on right: 108
assign (87)
    on left: 64 65 66 67, on right: 13 32
int_or_blank (88)
    on left: 68 69, on right: 73 77
structaccess (89)
    on left: 70, on right: 66 110
structIndex (90)
    on left: 71 72, on right: 70
arrdec (91)
    on left: 73, on right: 45
arr (92)
    on left: 74, on right: 58 79 80
arrHelper (93)
    on left: 75 76, on right: 74 75
matdec (94)
    on left: 77, on right: 46
mat (95)
    on left: 78, on right: 59
matHelper (96)
    on left: 79 80, on right: 78 79
mapdec (97)
    on left: 81, on right: 47
map (98)
    on left: 82, on right: 60
mapHelper (99)
    on left: 83 84, on right: 82 86
mapHelper2 (100)
    on left: 85 86, on right: 83 84
vectordec (101)
    on left: 87, on right: 48
vector (102)
    on left: 88, on right: 61
elementdec (103)
    on left: 89, on right: 49
property (104)
    on left: 90, on right: 67 111
expr (105)
    on left: 91 92, on right: 14 33 40 43 64 65 66 67 70 72 75 76 83
    84 88 91 112 123 131 132
logicoperation (106)
    on left: 93 94, on right: 91 92 93
logicfactor (107)
    on left: 95 96, on right: 93 94
comparison (108)
    on left: 97 98, on right: 95 96
operation (109)
    on left: 99 100 101, on right: 97 98 99 100
factor (110)
    on left: 102 103 104, on right: 99 100 101 102 103
hvalue (111)
    on left: 105 106 107, on right: 102 103 104 105 106
value (112)
    on left: 108 109 110 111 112, on right: 105 106 107
comp_operator (113)
    on left: 113 114 115 116 117 118, on right: 97
logicstruct (114)
    on left: 119 120 121, on right: 34
if (115)
    on left: 122, on right: 119
ifHelper (116)
    on left: 123, on right: 122 125
ifHelper2 (117)
    on left: 124 125, on right: 123
ifHelper3 (118)
    on left: 126 127, on right: 122
for (119)
    on left: 128, on right: 120
forHelper (120)
    on left: 129 130, on right: 128
stepfor (121)
    on left: 131, on right: 130
while (122)
    on left: 132, on right: 121
newlineCicle (123)
    on left: 133 134, on right: 123 127 128 132 133
newline (124)
    on left: 135, on right: 133 134


state 0

    0 $accept: . prog $end

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    LF         shift, and go to state 5
    CR         shift, and go to state 6
    RES_DPLY   shift, and go to state 7
    V_ID       shift, and go to state 8
    V_VAR      shift, and go to state 9
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16
    V_ARR      shift, and go to state 17
    V_MAT      shift, and go to state 18
    V_MAP      shift, and go to state 19
    V_VECTOR   shift, and go to state 20
    V_ELEM     shift, and go to state 21
    RES_ORDER  shift, and go to state 22

    $end      reduce using rule 12 (script)
    $default  reduce using rule 10 (optlfCicle)

    prog            go to state 23
    config          go to state 24
    optlfCicle      go to state 25
    script          go to state 26
    crlf            go to state 27
    deploy          go to state 28
    function        go to state 29
    funcall         go to state 30
    vardec          go to state 31
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    assign          go to state 35
    structaccess    go to state 36
    arrdec          go to state 37
    arr             go to state 38
    matdec          go to state 39
    mat             go to state 40
    mapdec          go to state 41
    map             go to state 42
    vectordec       go to state 43
    vector          go to state 44
    elementdec      go to state 45
    property        go to state 46
    expr            go to state 47
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 1

   74 arr: SYM_OBRAC . arrHelper SYM_CBRAC
   78 mat: SYM_OBRAC . optlf matHelper SYM_CBRAC

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    LF         shift, and go to state 5
    CR         shift, and go to state 6
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    SYM_OBRAC  [reduce using rule 21 (optlf)]

    crlf            go to state 56
    optlf           go to state 57
    funcall         go to state 30
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    arrHelper       go to state 59
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 61
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 2

  112 value: SYM_OPARE . expr SYM_CPARE

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    funcall         go to state 30
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 62
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 3

   82 map: SYM_OCURL . optlf mapHelper SYM_CCURL
   88 vector: SYM_OCURL . expr SYM_COMMA expr SYM_CCURL

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    LF         shift, and go to state 5
    CR         shift, and go to state 6
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    V_ID      [reduce using rule 21 (optlf)]
    V_CHAR    [reduce using rule 21 (optlf)]
    V_STRING  [reduce using rule 21 (optlf)]
    V_FLOAT   [reduce using rule 21 (optlf)]
    V_INT     [reduce using rule 21 (optlf)]
    V_DOUBLE  [reduce using rule 21 (optlf)]
    V_BOOL    [reduce using rule 21 (optlf)]
    V_HEX     [reduce using rule 21 (optlf)]

    crlf            go to state 56
    optlf           go to state 63
    funcall         go to state 30
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 64
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 4

   96 logicfactor: MTH_NOT . comparison

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    funcall       go to state 30
    basictypes    go to state 32
    cte           go to state 33
    var_or_cte    go to state 34
    structaccess  go to state 58
    arr           go to state 38
    mat           go to state 40
    map           go to state 42
    vector        go to state 44
    property      go to state 60
    comparison    go to state 65
    operation     go to state 51
    factor        go to state 52
    hvalue        go to state 53
    value         go to state 54


state 5

   20 crlf: LF .

    $default  reduce using rule 20 (crlf)


state 6

   19 crlf: CR . LF

    LF  shift, and go to state 66


state 7

   23 deploy: RES_DPLY . M_ID

    M_ID  shift, and go to state 67


state 8

   38 funcall: V_ID . SYM_OPARE funcallHelper SYM_CPARE
   62 var_or_cte: V_ID .
   65 assign: V_ID . MTH_SEQUA expr
   70 structaccess: V_ID . SYM_OBRAC expr SYM_CBRAC structIndex
   90 property: V_ID . SYM_DOT V_ID

    SYM_OBRAC  shift, and go to state 68
    SYM_OPARE  shift, and go to state 69
    SYM_DOT    shift, and go to state 70
    MTH_SEQUA  shift, and go to state 71

    $default  reduce using rule 62 (var_or_cte)


state 9

   44 vardec: V_VAR . V_ID

    V_ID  shift, and go to state 72


state 10

   50 basictypes: V_CHAR .

    $default  reduce using rule 50 (basictypes)


state 11

   51 basictypes: V_STRING .

    $default  reduce using rule 51 (basictypes)


state 12

   52 basictypes: V_FLOAT .

    $default  reduce using rule 52 (basictypes)


state 13

   54 basictypes: V_INT .

    $default  reduce using rule 54 (basictypes)


state 14

   53 basictypes: V_DOUBLE .

    $default  reduce using rule 53 (basictypes)


state 15

   55 basictypes: V_BOOL .

    $default  reduce using rule 55 (basictypes)


state 16

   56 basictypes: V_HEX .

    $default  reduce using rule 56 (basictypes)


state 17

   73 arrdec: V_ARR . V_ID SYM_OBRAC int_or_blank SYM_CBRAC

    V_ID  shift, and go to state 73


state 18

   77 matdec: V_MAT . V_ID SYM_OBRAC int_or_blank SYM_CBRAC SYM_OBRAC int_or_blank SYM_CBRAC

    V_ID  shift, and go to state 74


state 19

   81 mapdec: V_MAP . V_ID

    V_ID  shift, and go to state 75


state 20

   87 vectordec: V_VECTOR . V_ID

    V_ID  shift, and go to state 76


state 21

   89 elementdec: V_ELEM . V_ID

    V_ID  shift, and go to state 77


state 22

   24 function: RES_ORDER . V_ID SYM_OPARE functionHelper SYM_CPARE optlf SYM_OCURL crlf functionHelper2 SYM_CCURL

    V_ID  shift, and go to state 78


state 23

    0 $accept: prog . $end

    $end  shift, and go to state 79


state 24

    1 prog: config .

    $default  reduce using rule 1 (prog)


state 25

    3 config: optlfCicle . mainscene optlfCicle scenelist optlfCicle configHelper optlfCicle

    RES_MSCN  shift, and go to state 80

    mainscene  go to state 81


state 26

    2 prog: script .

    $default  reduce using rule 2 (prog)


state 27

   11 optlfCicle: crlf . optlfCicle
   18 script: crlf . script

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    LF         shift, and go to state 5
    CR         shift, and go to state 6
    RES_DPLY   shift, and go to state 7
    V_ID       shift, and go to state 8
    V_VAR      shift, and go to state 9
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16
    V_ARR      shift, and go to state 17
    V_MAT      shift, and go to state 18
    V_MAP      shift, and go to state 19
    V_VECTOR   shift, and go to state 20
    V_ELEM     shift, and go to state 21
    RES_ORDER  shift, and go to state 22

    $end      reduce using rule 12 (script)
    $default  reduce using rule 10 (optlfCicle)

    optlfCicle      go to state 82
    script          go to state 83
    crlf            go to state 27
    deploy          go to state 28
    function        go to state 29
    funcall         go to state 30
    vardec          go to state 31
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    assign          go to state 35
    structaccess    go to state 36
    arrdec          go to state 37
    arr             go to state 38
    matdec          go to state 39
    mat             go to state 40
    mapdec          go to state 41
    map             go to state 42
    vectordec       go to state 43
    vector          go to state 44
    elementdec      go to state 45
    property        go to state 46
    expr            go to state 47
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 28

   15 script: deploy . crlf script

    LF  shift, and go to state 5
    CR  shift, and go to state 6

    crlf  go to state 84


state 29

   16 script: function . crlf script

    LF  shift, and go to state 5
    CR  shift, and go to state 6

    crlf  go to state 85


state 30

  109 value: funcall .

    $default  reduce using rule 109 (value)


state 31

   17 script: vardec . crlf script
   64 assign: vardec . MTH_SEQUA expr

    MTH_SEQUA  shift, and go to state 86
    LF         shift, and go to state 5
    CR         shift, and go to state 6

    crlf  go to state 87


state 32

   57 cte: basictypes .

    $default  reduce using rule 57 (cte)


state 33

   63 var_or_cte: cte .

    $default  reduce using rule 63 (var_or_cte)


state 34

  108 value: var_or_cte .

    $default  reduce using rule 108 (value)


state 35

   13 script: assign . crlf script

    LF  shift, and go to state 5
    CR  shift, and go to state 6

    crlf  go to state 88


state 36

   66 assign: structaccess . MTH_SEQUA expr
  110 value: structaccess .

    MTH_SEQUA  shift, and go to state 89

    $default  reduce using rule 110 (value)


state 37

   45 vardec: arrdec .

    $default  reduce using rule 45 (vardec)


state 38

   58 cte: arr .

    $default  reduce using rule 58 (cte)


state 39

   46 vardec: matdec .

    $default  reduce using rule 46 (vardec)


state 40

   59 cte: mat .

    $default  reduce using rule 59 (cte)


state 41

   47 vardec: mapdec .

    $default  reduce using rule 47 (vardec)


state 42

   60 cte: map .

    $default  reduce using rule 60 (cte)


state 43

   48 vardec: vectordec .

    $default  reduce using rule 48 (vardec)


state 44

   61 cte: vector .

    $default  reduce using rule 61 (cte)


state 45

   49 vardec: elementdec .

    $default  reduce using rule 49 (vardec)


state 46

   67 assign: property . MTH_SEQUA expr
  111 value: property .

    MTH_SEQUA  shift, and go to state 90

    $default  reduce using rule 111 (value)


state 47

   14 script: expr . crlf script

    LF  shift, and go to state 5
    CR  shift, and go to state 6

    crlf  go to state 91


state 48

   91 expr: logicoperation . MTH_OR expr
   92     | logicoperation .

    MTH_OR  shift, and go to state 92

    $default  reduce using rule 92 (expr)


state 49

   93 logicoperation: logicfactor . MTH_AND logicoperation
   94               | logicfactor .

    MTH_AND  shift, and go to state 93

    $default  reduce using rule 94 (logicoperation)


state 50

   95 logicfactor: comparison .

    $default  reduce using rule 95 (logicfactor)


state 51

   97 comparison: operation . comp_operator operation
   98           | operation .

    MTH_DEQUA  shift, and go to state 94
    MTH_GT     shift, and go to state 95
    MTH_LT     shift, and go to state 96
    MTH_GTEQ   shift, and go to state 97
    MTH_LTEQ   shift, and go to state 98
    MTH_NOTEQ  shift, and go to state 99

    $default  reduce using rule 98 (comparison)

    comp_operator  go to state 100


state 52

   99 operation: factor . MTH_PLUS operation
  100          | factor . MTH_MINUS operation
  101          | factor .

    MTH_PLUS   shift, and go to state 101
    MTH_MINUS  shift, and go to state 102

    $default  reduce using rule 101 (operation)


state 53

  102 factor: hvalue . MTH_ASTRK factor
  103       | hvalue . MTH_DIVIS factor
  104       | hvalue .

    MTH_ASTRK  shift, and go to state 103
    MTH_DIVIS  shift, and go to state 104

    $default  reduce using rule 104 (factor)


state 54

  105 hvalue: value . MTH_POWER hvalue
  106       | value . MTH_ROOT hvalue
  107       | value .

    MTH_POWER  shift, and go to state 105
    MTH_ROOT   shift, and go to state 106

    $default  reduce using rule 107 (hvalue)


state 55

   38 funcall: V_ID . SYM_OPARE funcallHelper SYM_CPARE
   62 var_or_cte: V_ID .
   70 structaccess: V_ID . SYM_OBRAC expr SYM_CBRAC structIndex
   90 property: V_ID . SYM_DOT V_ID

    SYM_OBRAC  shift, and go to state 68
    SYM_OPARE  shift, and go to state 69
    SYM_DOT    shift, and go to state 70

    $default  reduce using rule 62 (var_or_cte)


state 56

   22 optlf: crlf .

    $default  reduce using rule 22 (optlf)


state 57

   78 mat: SYM_OBRAC optlf . matHelper SYM_CBRAC

    SYM_OBRAC  shift, and go to state 107

    arr        go to state 108
    matHelper  go to state 109


state 58

  110 value: structaccess .

    $default  reduce using rule 110 (value)


state 59

   74 arr: SYM_OBRAC arrHelper . SYM_CBRAC

    SYM_CBRAC  shift, and go to state 110


state 60

  111 value: property .

    $default  reduce using rule 111 (value)


state 61

   75 arrHelper: expr . SYM_COMMA arrHelper
   76          | expr .

    SYM_COMMA  shift, and go to state 111

    $default  reduce using rule 76 (arrHelper)


state 62

  112 value: SYM_OPARE expr . SYM_CPARE

    SYM_CPARE  shift, and go to state 112


state 63

   82 map: SYM_OCURL optlf . mapHelper SYM_CCURL

    V_ID      shift, and go to state 113
    V_CHAR    shift, and go to state 10
    V_STRING  shift, and go to state 11
    V_FLOAT   shift, and go to state 12
    V_INT     shift, and go to state 13
    V_DOUBLE  shift, and go to state 14
    V_BOOL    shift, and go to state 15
    V_HEX     shift, and go to state 16

    basictypes  go to state 114
    mapHelper   go to state 115


state 64

   88 vector: SYM_OCURL expr . SYM_COMMA expr SYM_CCURL

    SYM_COMMA  shift, and go to state 116


state 65

   96 logicfactor: MTH_NOT comparison .

    $default  reduce using rule 96 (logicfactor)


state 66

   19 crlf: CR LF .

    $default  reduce using rule 19 (crlf)


state 67

   23 deploy: RES_DPLY M_ID .

    $default  reduce using rule 23 (deploy)


state 68

   70 structaccess: V_ID SYM_OBRAC . expr SYM_CBRAC structIndex

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    funcall         go to state 30
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 117
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 69

   38 funcall: V_ID SYM_OPARE . funcallHelper SYM_CPARE

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    $default  reduce using rule 39 (funcallHelper)

    funcall         go to state 30
    funcallHelper   go to state 118
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 119
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 70

   90 property: V_ID SYM_DOT . V_ID

    V_ID  shift, and go to state 120


state 71

   65 assign: V_ID MTH_SEQUA . expr

    SYM_OBRAC  shift, and go to state 1
    SYM_OPARE  shift, and go to state 2
    SYM_OCURL  shift, and go to state 3
    MTH_NOT    shift, and go to state 4
    V_ID       shift, and go to state 55
    V_CHAR     shift, and go to state 10
    V_STRING   shift, and go to state 11
    V_FLOAT    shift, and go to state 12
    V_INT      shift, and go to state 13
    V_DOUBLE   shift, and go to state 14
    V_BOOL     shift, and go to state 15
    V_HEX      shift, and go to state 16

    funcall         go to state 30
    basictypes      go to state 32
    cte             go to state 33
    var_or_cte      go to state 34
    structaccess    go to state 58
    arr             go to state 38
    mat             go to state 40
    map             go to state 42
    vector          go to state 44
    property        go to state 60
    expr            go to state 121
    logicoperation  go to state 48
    logicfactor     go to state 49
    comparison      go to state 50
    operation       go to state 51
    factor          go to state 52
    hvalue          go to state 53
    value           go to state 54


state 72

   44 vardec: V_VAR V_ID .

    $default  reduce using rule 44 (vardec)


state 73

   73 arrdec: V_ARR V_ID . SYM_OBRAC int_or_blank SYM_CBRAC

    SYM_OBRAC  shift, and go to state 122


state 74

   77 matdec: V_MAT V_ID . SYM_OBRAC int_or_blank SYM_CBRAC SYM_OBRAC int_or_blank SYM_CBRAC

    SYM_OBRAC  shift, and go to state 123


state 75

   81 mapdec: V_MAP V_ID .

    $default  reduce using rule 81 (mapdec)


state 76

   87 vectordec: V_VECTOR V_ID .

    $default  reduce using rule 87 (vectordec)


state 77

   89 elementdec: V_ELEM V_ID .

    $default  reduce using rule 89 (elementdec)


state 78

   24 function: RES_ORDER V_ID . SYM_OPARE functionHelper SYM_CPARE optlf SYM_OCURL crlf functionHelper2 SYM_CCURL

    SYM_OPARE  shift, and go to state 124


state 79

    0 $accept: prog $end .

    $default  accept


state 80

    6 mainscene: RES_MSCN . F_ID crlf

    F_ID  shift, and go to state 125


state 81

    3 config: optlfCicle mainscene . optlfCicle scenelist optlfCicle configHelper optlfCicle

    LF  shift, and go to state 5
    CR  shift, and go to state 6

    $default  reduce using rule 10 (optlfCicle)

    optlfCicle  go to state 126
    crlf        go to state 127


state 82

   11 optlfCicle: crlf optlfCicle .

    $default  reduce using rule 11 (optlfCicle)


state 83

   18 script: crlf script .

    $default  reduce using rule 18 (script)


state 84
